# glyph

./: .gitignore  AGENTS.md  ARGV_BUG.md  BUILD_AND_LINK.md  Cargo.toml  ENUM_DESIGN.md  EXTERN_C.md.save  EXTERN_C_TODO.md  FORMATTING_DESIGN.md  FORMATTING_IMPLEMENTATION_SUMMARY.md  FORMATTING_TODO.md  FUNCTION_CALLS_DESIGN.md  GLYPHLANG_GUIDE.md  HELLO_WORLD.md  INTERFACES_DESIGN.md  LAMDAS_DESIGN.md  LLMS.md  NETWORKING_API.md  NEXT_SESSION.md  PLAN.md  PROGRESS.md  README.md  SHARED_DESIGN.md  demo.sh  justfile
crates/glyph-backend/: Cargo.toml  build.rs
crates/glyph-backend/src/: codegen.rs  lib.rs  linker.rs
crates/glyph-backend/src/codegen/: aggregate.rs  array.rs  context.rs  emit.rs  entry.rs  externs.rs  file.rs  functions.rs  map.rs  map_debug.rs  map_hash.rs  map_layout.rs  ownership.rs  rvalue.rs  string.rs  string_ops.rs  tests.rs  types.rs  vec.rs
crates/glyph-cli/: Cargo.toml  build.rs
crates/glyph-cli/src/: build_version.rs  dependency.rs  diagnostics.rs  glyph.rs  main.rs  module_loader.rs
crates/glyph-cli/tests/: apex_webserver.rs  argv_redteam.rs  case_system.rs  codegen_arrays.rs  codegen_bool_branch.rs  codegen_calls.rs  codegen_enums.rs  codegen_interfaces.rs  codegen_json.rs  codegen_map.rs  codegen_neg_literal.rs  codegen_own.rs  codegen_shared.rs  codegen_strings.rs  codegen_structs.rs  codegen_sys.rs  codegen_vec.rs  early_return_control_flow.rs  extern_hello.rs  extern_io.rs  for_loop_vec_unpack.rs  formatting_basic.rs  formatting_comprehensive.rs  print_strings.rs  redteam_edge_cases.rs  std_file_open.rs  std_json_parser.rs  std_net_basic.rs  std_process_run.rs  std_string_concat.rs  std_term_guard.rs  std_time.rs  struct_return_nested_sret.rs  tuple_return_sret.rs  vec_string_inner_scope_redteam.rs  vec_string_ir.rs  vec_string_redteam.rs
crates/glyph-frontend/: Cargo.toml  build.rs
crates/glyph-frontend/src/: lexer.rs  lib.rs  method_symbols.rs  mir_lower.rs  module_resolver.rs  monomorphize.rs  parser.rs  resolver.rs  stdlib.rs
crates/glyph-frontend/src/mir_lower/: call.rs  context.rs  expr.rs  flow.rs  mod.rs  signatures.rs  tests.rs  types.rs  value.rs
crates/glyph-frontend/src/parser/: expr.rs  imports.rs  items.rs  mod.rs  stmts.rs  types.rs
crates/glyph-frontend/src/resolver/: const_eval.rs  imports.rs  methods.rs  mod.rs  validation.rs
crates/glyph-frontend/src/snapshots/: glyph_frontend__lexer__tests__lexes_simple_function.snap  glyph_frontend__mir_lower__tests__if_else_blocks.snap  glyph_frontend__mir_lower__tests__lowers_if_else_to_blocks_and_returns.snap  glyph_frontend__parser__tests__if_call.snap  glyph_frontend__parser__tests__parses_simple_function.snap
crates/glyph-frontend/src/stdlib/: net.glyph  term.glyph  time.glyph
crates/glyph-frontend/tests/: imported_nested_field_access.rs  mir_fixtures.rs  parse.rs  vec_get_ref.rs
crates/glyph-frontend/tests/snapshots/: mir_fixtures__mir_array_basic.snap  mir_fixtures__mir_array_len.snap  mir_fixtures__mir_array_loop.snap  (+54 more)
crates/glyphlsp/: Cargo.toml
crates/glyphlsp/src/: diagnostics.rs  document.rs  main.rs  position.rs  server.rs
(+394 files in other folders)
