[package]
name = "glyph-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = []
codegen = ["dep:llvm-sys"]

[dependencies]
anyhow.workspace = true
glyph-core = { path = "../glyph-core" }
llvm-sys = { version = "201", optional = true }

[dev-dependencies]
insta.workspace = true
