[package]
name = "glyph-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["codegen"]
codegen = ["glyph-backend/codegen"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
glyph-core = { path = "../glyph-core" }
glyph-frontend = { path = "../glyph-frontend" }
glyph-backend = { path = "../glyph-backend" }
miette.workspace = true

[dev-dependencies]
assert_cmd = "2"
