[package]
name = "glyph-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = ["codegen"]
codegen = ["glyph-backend/codegen"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
glyph-core = { path = "../glyph-core" }
glyph-frontend = { path = "../glyph-frontend" }
glyph-backend = { path = "../glyph-backend" }
miette.workspace = true
walkdir = "2"
toml.workspace = true
serde.workspace = true
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

[[bin]]
name = "glyph-cli"
path = "src/main.rs"

[[bin]]
name = "glyph"
path = "src/glyph.rs"
