[package]
name = "glyphlsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
glyph-core = { path = "../glyph-core" }
glyph-frontend = { path = "../glyph-frontend" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
dashmap = "5"
